# rag-chatbot

./: .gitignore  README.md  pyproject.toml
src/ragchat/: chat.py  cli.py  config.py  llm.py  loader.py  search.py  web.py
tests/: test_llm.py  test_loader.py  test_search.py  test_web.py
